
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "acm-py", email = "acmpy4592@gmail.com"},
]
dependencies = [
    "pytest>=3.3.0",
    "pytest-cov>=2.4.0",
    "tox",
    "twine>=1.12.1",
    "behave>=1.2.4",
    "pexpect>=3.3",
    "coverage>=5.0.4",
    "autopep8==1.3.3",
    "colorama>=0.4.1",
#    "pep8radius @ git+https://github.com/hayd/pep8radius.git",
    "click>=7.0",
    "paramiko==2.11.0",
    "pyperclip>=1.8.1",
    "importlib-resources>=5.0.0",
    "pyaes>=1.6.1",
    "sqlglot>=5.1.3",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
